chore: add Prettier and format codebase
- Added Prettier for consistent code formatting across the project.
- Installed Prettier configuration with necessary plugins.
- Ran Prettier to auto-format all files in the codebase.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,14 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "next/typescript"
-  ],
+  "extends": ["next/core-web-vitals", "next/typescript", "prettier"],
   "rules": {
     "@next/next/no-img-element": "off"
   }
 }
+
 /*
- * We are disabling the @next/next/no-img-element rule because we are using 
+ * We are disabling the @next/next/no-img-element rule because we are using
  * the <img> tag for now instead of the <Image> component from Next.js.
- * This is acceptable for the current phase of development where image optimization 
- * is not a priority, and we want more control or simplicity over the image rendering. 
+ * This is acceptable for the current phase of development where image optimization
+ * is not a priority, and we want more control or simplicity over the image rendering.
  * In the future, we may consider migrating to the <Image> component for performance optimizations.
  */
